--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,13 +21,25 @@
 - name: Configure New Relic Agent
   template:
     src: newrelic.ini.j2
-    dest: /etc/php.d/newrelic.ini
-    group: newrelic
+    dest: /etc/php/7.1/mods-available/newrelic.ini
+    group: root 
     owner: root
     mode: 0644
   notify:
     - Restart New Relic Daemon
   when: newrelic_loaded_os_family|default(False) != False
+
+- name: Create Symbolic links
+  file:
+    src: '/etc/php/7.1/mods-available/newrelic.ini'
+    dest: '{{ item }}'
+    state: link 
+  with_items    :
+    - { '/etc/php/7.1/fpm/conf.d/newrelic.ini' }
+    - { '/etc/php/7.1/cli/conf.d/newrelic.ini' }
+  notify:
+    - Restart php-fpm 
+    - Restart nginx
 
 - name: Ensure New Relic Agent is started and enabled
   service:
