--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,22 +25,22 @@
     group: root 
     owner: root
     mode: 0644
+    #force: no
   notify:
     - Restart New Relic Daemon
-  when: newrelic_loaded_os_family|default(False) != False
-
-- name: Create Symbolic links
-  file:
-    src: '/etc/php/7.1/mods-available/newrelic.ini'
-    dest: '{{ item }}'
-    state: link 
-  with_items    :
-    - { '/etc/php/7.1/fpm/conf.d/newrelic.ini' }
-    - { '/etc/php/7.1/cli/conf.d/newrelic.ini' }
-  notify:
     - Restart php-fpm 
     - Restart nginx
+  when: newrelic_loaded_os_family|default(False) != False
 
+- name: Delete unused newrelic.ini
+  file:
+    path: "{{ item }}"
+    state: absent
+  with_items:
+    - /etc/php/7.1/fpm/conf.d/newrelic.ini
+    - /etc/php/7.1/cli/conf.d/newrelic.ini
+  changed_when: False
+        
 - name: Ensure New Relic Agent is started and enabled
   service:
     name: newrelic-daemon
