--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,15 +13,22 @@
 - include: default.yml
   when: newrelic_loaded_os_family|default(False) == False
 
+- name: Check if newrelic is running
+  shell: pgrep newrelic-daemon 
+  ignore_errors: yes
+  changed_when: false
+  register: newrelic_status
+
 - name: New Relic Agent silent install
   command: newrelic-install install
   environment:
     NR_INSTALL_SILENT: true
+  when: newrelic_status.rc != 0
 
 - name: Configure New Relic Agent
   template:
     src: newrelic.ini.j2
-    dest: /etc/php/7.2/mods-available/newrelic.ini
+    dest: /etc/php/{{ php_version }}/mods-available/newrelic.ini
     group: root 
     owner: root
     mode: 0644
@@ -37,8 +44,8 @@
     path: "{{ item }}"
     state: absent
   with_items:
-    - /etc/php/7.2/fpm/conf.d/newrelic.ini
-    - /etc/php/7.2/cli/conf.d/newrelic.ini
+    - /etc/php/{{ php_version }}/fpm/conf.d/newrelic.ini
+    - /etc/php/{{ php_version }}/cli/conf.d/newrelic.ini
   changed_when: False
         
 - name: Ensure New Relic Agent is started and enabled
