--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,6 +18,7 @@
   ignore_errors: yes
   changed_when: false
   register: newrelic_status
+  check_mode: no
 
 - name: New Relic Agent silent install
   command: newrelic-install install
